fix jumbotron font-size and button text align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,13 +257,15 @@ img {
 #jumbotron-text {
     width: 30%;
     padding-bottom: 1rem;
-    font-size: 12px;
+    
 }
-
-
 
 #jumbotron-text span{
     display: block;
+}
+
+#jumbotron-text .main-button{
+    text-align: center;
 }
 
 #jumbotron-text .arrow{
